# tensorflowlearn

./: .gitignore  3d.py  FaceNet.ipynb  GLM6B.py  HorseRaid.py  Liner.ipynb  MNIST.ipynb  README.md  VideoDownloader.py  VideoDownloader1.py  VideoDownloader2.py  cmd.md  merge.py  mnist-cnn-1.ipynb  mnist-cnn.ipynb  mnist-cnn.py  sample.py  switch-env.sh  tensorflow-learn.ipynb  房屋价格预测.ipynb
HMM/: HMMTest.py
MNIST/mnist-master/: .gitignore  CMakeLists.txt  README.md  extract.sh  gen_path.py  makefile  parse_mnist.cpp
MathForProgrammers/: JQ.py  Learning.py  PCA.py  chapter01.ipynb  chapter02.ipynb  draw3d.py  slidwindow.py
bert/: BaiChuan.py  BertLearn.py  BertOneByOne.py  Word2Vec.py
embedding/: TencendNlp.py  TencendNlpEmbeding.py
summary/liner-regression-1/: events.out.tfevents.1674409405.DaneBrownM1MaxdeMacBook-Pro.local  events.out.tfevents.1674447879.DaneBrownM1MaxdeMacBook-Pro.local  events.out.tfevents.1674447952.DaneBrownM1MaxdeMacBook-Pro.local  events.out.tfevents.1674448034.DaneBrownM1MaxdeMacBook-Pro.local  events.out.tfevents.1674448055.DaneBrownM1MaxdeMacBook-Pro.local
summary/liner-regression-2/: events.out.tfevents.1674455051.DaneBrownM1MaxdeMacBook-Pro.local  events.out.tfevents.1674455883.DaneBrownM1MaxdeMacBook-Pro.local  events.out.tfevents.1674458028.DaneBrownM1MaxdeMacBook-Pro.local  events.out.tfevents.1674462470.DaneBrownM1MaxdeMacBook-Pro.local  (+2 more)
torch/: ChatGLM_6B.py  deepnlp.py  simple_class_txt.py
transformer/: BertWordEmbedding.py  WrodEmbedding.py  transformerTest.py
